[package]
name = "RustyTools_Astro"
version = "0.0.1"
authors = ["Katsuya Colon <kcolon@caltech.edu>"]
description = "Tools to analyze astrophotography images."
license = "MIT/Apache-2.0"
repository = "https://github.com/klcolon/Rusty-Tools-for-Astrophotographers.git"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"